--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "@types/pg": "^8.11.4",
